refactor(task/GD-54) project structure refactor and dependency normalization.